Fixed navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     align-items: center;
     vertical-align: center;
     margin-right:8px;
-    line-height: 50px;
+    margin-left: 20px;
 }
 
 .iconText{
